# klspw

./: .clang-format  .clangd  .gersemirc  .gitignore  .kiroignore  .prettierignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  justfile  vcpkg-configuration.json  vcpkg.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependency-review.yml  fuzzing.yml  release.yml  scorecard.yml  update-tap.yml
.kiro/steering/: product.md  structure.md  tech.md
Formula/: klspw.rb
fuzz/: fuzz_config_yaml.cpp  fuzz_gradle_output.cpp
include/: common.hpp  config.hpp  describe.hpp  files.hpp  gradle.hpp  gradle_output.hpp  gradle_runner.hpp  json.hpp  module_matcher.hpp  pipeline.hpp  process.hpp  process_runner.hpp  ranges.hpp  sources.hpp  strings.hpp  validate.hpp  workspace.hpp  workspace_model.hpp  yaml.hpp
resources/: bin2hex.cmake  init.gradle.kts  init_script_content.hpp.in  native_stubs_content.hpp.in  version.hpp.in
resources/stubs/: kotlin-native-stubs.jar.hex
resources/stubs/kotlin/native/: NativeAnnotations.kt
scripts/: resolve-action-shas-impl.py  resolve-action-shas.sh
src/: common.cpp  files.cpp  main.cpp  strings.cpp
test/: common_test.cpp  config_save_test.cpp  config_test.cpp  config_validate_test.cpp  describe_test.cpp  files_test.cpp  gradle_test.cpp  integration_test.cpp  module_matcher_test.cpp  process_test.cpp  ranges_test.cpp  runners_test.cpp  smoke.cpp  sources_test.cpp  strings_test.cpp  test_common.hpp  workspace_json_test.cpp  workspace_test.cpp
test/fixtures/: example_config.yaml  example_per_root_build_config.yaml  example_proj_workspace.json  example_root_workspace.json  gradle_empty_output.json  gradle_kmp_android_output.json  gradle_output.json  gradle_raw_output.txt
test/fixtures/projects/kmp/: build.gradle.kts  settings.gradle.kts
test/fixtures/projects/kmp/app/: build.gradle.kts
test/fixtures/projects/kmp/app/src/commonMain/kotlin/: App.kt
test/fixtures/projects/kmp/app/src/jvmMain/kotlin/: Main.kt
test/fixtures/projects/kmp/core/: build.gradle.kts
test/fixtures/projects/kmp/core/src/commonMain/kotlin/: Greeter.kt
test/fixtures/projects/kmp/core/src/jvmMain/kotlin/: Greeter.jvm.kt
test/fixtures/projects/multi/: build.gradle.kts  klspw.yaml  settings.gradle.kts
test/fixtures/projects/multi-root/: klspw.yaml
test/fixtures/projects/multi-root/src/service/: build.gradle.kts
test/fixtures/projects/multi-root/src/service/src/main/kotlin/: App.kt
test/fixtures/projects/multi/app/: build.gradle.kts
test/fixtures/projects/multi/app/src/main/kotlin/: App.kt
test/fixtures/projects/multi/lib/: build.gradle.kts
test/fixtures/projects/simple/: build.gradle.kts
test/fixtures/projects/simple/src/main/kotlin/: Main.kt
test/fixtures/projects/with-deps/: build.gradle.kts
test/fixtures/projects/with-deps/src/main/kotlin/: App.kt
test/fixtures/projects/with-deps/src/test/kotlin/: AppTest.kt
test/fixtures/projects/with-serialization/: build.gradle.kts  settings.gradle.kts
test/fixtures/projects/with-serialization/src/main/kotlin/com/example/: Model.kt
